# rust-by-practice

./: .gitignore  Readme.md  main  main.rs
exercism_rust/rust/clock/.exercism/: metadata.json
exercism_rust/rust/reverse-string/.exercism/: metadata.json
exercism_rust/rust/reverse-string/src/: lib.rs
exercism_rust/rust/reverse-string/tests/: reverse-string.rs
ride_hailing_service_testing_gpt/: Cargo.toml
ride_hailing_service_testing_gpt/src/: main.rs
run_example/: returns_summarizable  returns_summarizable.rs
simple_chat/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
simple_chat/src/: db.rs  main.rs
simple_project/simple-chat-terminal/simple-chat-terminal-client/: Cargo.toml
simple_project/simple-chat-terminal/simple-chat-terminal-client/src/: main.rs
simple_project/simple-chat-terminal/simple-chat-terminal-server/: Cargo.toml
simple_project/simple-chat-terminal/simple-chat-terminal-server/src/: main.rs
simple_project/simple-code/: simple_code_cache.rs
tinder_clone/: Cargo.toml  docker-compose.yaml  project_structure.txt  requirement_document.md  system_analysis.md
tinder_clone/config/: dev.env  prod.env
tinder_clone/src/: db.rs  main.rs  models.rs
