[package]
name = "simple_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "x.x.x"
diesel = { version = "1.4", features = ["postgres"] }
serde = "x.x.x"
serde_json = "x.x.x"
serde_derive = "x.x.x"

